examples/failing/2378.purs
-- @shouldFailWith OrphanInstance
module Main where

import Lib

instance fooX :: Foo "x"
